--- a/style.css
+++ b/style.css
@@ -17,3 +17,27 @@
     font-weight: 400;
     font-size: 30px;
 }
+.password-btn{
+    width: 70px;
+    height: 30px;
+    border: none;
+    border-radius: 8px;
+    background-color: black;
+    color: white;
+    font-family: 'open sans' ,sans-serif;
+    cursor: pointer;
+    text-align: center;
+
+}
+.password{
+    width: 70px;
+    height: 30px;
+    border: none;
+    border-radius: 8px;
+    background-color: black;
+    color: white;
+    font-family: 'open sans' ,sans-serif;
+    cursor: pointer;
+    text-align: center;
+
+}
