--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
 }
+body{
+    background-color: #f5f5f5;
+}
 .container{
     background-image: linear-gradient(45deg,rgb(244, 180, 190),rgb(129, 8, 129));
     margin: auto;
@@ -18,7 +21,7 @@
     font-size: 30px;
 }
 #password-btn{
-    width: 70px;
+    width: 100%;
     height: 30px;
     padding: 5px;
     border: none;
@@ -28,17 +31,34 @@
     font-family: 'open sans' ,sans-serif;
     cursor: pointer;
     text-align: center;
+    transition: all 0.3s ease;
 
 }
 #password{
-    width: 70px;
+    width: 100%;
     height: 30px;
     border: none;
     border-radius: 8px;
-    background-color: black;
-    color: white;
+    background-color:#f5f5f5;
+    color:black;
     font-family: 'open sans' ,sans-serif;
     cursor: pointer;
     text-align: center;
+    font-weight: bold;
+    font-size: 1rem;
 
+
+}
+#copy{
+    margin: 0.7rem 0;
+	padding: 1rem 2rem;
+	border: none;
+	border-radius: 10px;
+	background-color: #2bb673;
+	color: #fff;
+	font-size: 1.3rem;
+	font-weight: 500;
+	cursor: pointer;
+	transition: all 0.3s ease;
+	border: 2px solid #2bb673;
 }
